--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-stack-client",
+  "name": "instapost-client",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
